--- a/Website/main.css
+++ b/Website/main.css
@@ -50,7 +50,10 @@ p
 .main
 {
 	background-color: white;
-	padding: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 20px;
 	margin-left: 20%;
 	margin-right: 20%;
 	margin-top: 0px;
@@ -61,6 +64,21 @@ p
 .error
 {
 	display: none;
+}
+
+.footer
+{
+	padding: 10px;
+	margin-left: 20%;
+	margin-right: 20%;
+	margin-top: 0px;
+	margin-bottom: 0px;
+	background-color: #5b9aff;
+}
+
+.footer p
+{
+	marging-left: 10px;
 }
 
 #main-title
